# istyle-verilog-formatter

./: .gitignore  CMakeLists.txt  README.md  istyle-verilog-formatter.sln  istyle-verilog-formatter.vcxproj  istyle-verilog-formatter.vcxproj.filters
src/: astyle.h  astyle_main.cpp
src/astyle/: ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp  ASStreamIterator.cpp
